Impl. parcial sidebar e ajuste menubar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,8 @@ body {
   font-weight: 500;
   font-family: 'Roboto', 'Poppins', sans-serif;
 }
+
+h1, h2, h3, h4 {
+  margin: 0;
+  padding: 0;
+}
