--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div class="text-danger">Financial Budget</div>
 
+<app-menubar></app-menubar>
+<app-sidebar></app-sidebar>
 
 <router-outlet></router-outlet>
